# mapviewer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task.md  tasks.py  vercel.json
.github/workflows/: ci.yml
data/: data_sources.md
docs/: development.md  pipeline.md
notebooks/: inspect_average_m2_prices.ipynb
src/backend/: __init__.py  main.py
src/data/: __init__.py  config.py  etl.py  generate_tiles.py  pipeline.py  precompute.py  precompute_parcels.py  split_communes.py
src/data/pipeline/: __main__.py  geometry.py  main.py  stats.py
src/frontend/: app.js  country.geojson  departements.geojson  index.html  regions.geojson  stats_cache.json  style.css  top_expensive.json
src/frontend/communes/: 01.geojson  02.geojson  03.geojson  04.geojson  05.geojson  06.geojson  07.geojson  08.geojson  09.geojson  10.geojson  11.geojson  12.geojson  13.geojson  14.geojson  15.geojson  16.geojson  17.geojson  18.geojson  19.geojson  21.geojson  22.geojson  23.geojson  24.geojson  25.geojson  26.geojson  27.geojson  28.geojson  29.geojson  2A.geojson  2B.geojson  30.geojson  31.geojson  32.geojson  33.geojson  34.geojson  35.geojson  36.geojson  37.geojson  38.geojson  39.geojson  (+57 more)
src/frontend/old2/: stats_cache.json
src/frontend/old3/: stats_cache.json
