[project]
name = "mapviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.3",
    "fastapi>=0.127.1",
    "geopandas>=1.1.2",
    "mapbox-vector-tile>=2.2.0",
    "msgpack>=1.1.2",
    "pandas>=2.3.3",
    "py7zr>=1.1.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "invoke>=2.2.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
